2010-08-24  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        commit-queue and EWS bots should report all failures
        https://bugs.webkit.org/show_bug.cgi?id=41820

        Right now commit-queue/EWS only report failures when the
        patch under testing fails.  We should report all failures
        to the status server so that we can diagnose when the bots
        are wedged w/o needing to log into the machines.

        I also reduced the amount of data we upload since we've seen
        timeouts during status upload.

        * Scripts/webkitpy/common/system/executive.py:
        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:
        * Scripts/webkitpy/tool/commands/queues.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:

2010-08-24  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Remove HTML5 parser testing infrastructure now that we don't need it
        https://bugs.webkit.org/show_bug.cgi?id=44581

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):
        (initializeGlobalsFromCommandLineOptions):
        * Scripts/old-run-webkit-tests:
        * Scripts/test-html5-parser: Removed.

2010-08-24  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Fix 28 inspector test crashes
        https://bugs.webkit.org/show_bug.cgi?id=44574

        Reset DevToolsClient and DevToolsAgent before closing a DevTools
        WebView in order to avoid accessing to a deleted WebView instance.

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::closeDevTools):

2010-08-24  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Ojan Vafai.

        new-run-webkit-tests: clean up code for test_types, test_failures

        Add a bunch of unit tests for webkitpy.layout_tests.test_types and
        webkitpy.layout_tests.layout_package.test_failures, and remove